--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-	"name": "e-for-everything-client",
+	"name": "e-for-everything-server",
 	"version": "1.0.0",
 	"description": "Backend",
-	"main": "server.js",
+	"main": "index.js",
 	"engines": {
-		"node": "14.17.0",
-		"npm": "7.21.1"
+		"node": "14.x"
 	},
 	"scripts": {
-		"start": "node server.js",
-		"server": "nodemon server.js",
-		"client": "cd ./client && npm start",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"vercel-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"start": "node index.js",
+		"dev": "nodemon index.js"
 	},
 	"author": "Ayush Yadav",
 	"license": "ISC",
